--- a/src/sass/blocks/why.scss
+++ b/src/sass/blocks/why.scss
@@ -14,4 +14,19 @@
             margin-bottom: 1.5em;
         }
     }
+
+    @include tablet {
+        text-align: left;
+        &__grid{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            column-gap: 1em;
+        }
+    }
+
+    @include desktop {
+        &__grid{
+            grid-template-columns: repeat(4,1fr);
+        }
+    }
 }
