--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,12 +1,32 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 1em 1.5em;
+  padding: 1em 0;
+}
+.header__logo {
+  align-self: center;
+}
+.header__content {
+  display: flex;
+  justify-content: space-between;
+}
+.header .button {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .header .button {
+    display: inline;
+  }
+  .header__content {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .hero {
   text-align: center;
   padding-bottom: 5em;
+  background: var(--lightGray);
 }
 .hero .copy {
   margin-bottom: 2.5em;
@@ -18,10 +38,67 @@
   margin: 0 calc(-1 * var(--wrapperSpace));
   margin-bottom: 1.2em;
 }
+@media screen and (min-width: 768px) {
+  .hero {
+    text-align: left;
+    background: url("../../static/images/bg-intro-desktop.svg") left 650px top -290px no-repeat;
+    background-size: cover;
+    min-height: 550px;
+    box-sizing: border-box;
+  }
+  .hero .title__h1 {
+    text-align: left;
+  }
+  .hero__content {
+    display: grid;
+    min-height: 550px;
+    align-items: center;
+    grid-template-areas: "description images";
+    grid-template-columns: 480px 1fr;
+    position: relative;
+  }
+  .hero__img {
+    grid-area: images;
+    height: 768px;
+    width: 500px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: url("../../static/images/image-mockups.png") left bottom no-repeat;
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .hero__img {
+    background: url("../../static/images/image-mockups.png") right bottom no-repeat;
+    background-size: 100%;
+    left: 150px;
+    right: 0;
+    top: 0;
+  }
+}
 
 .menu {
+  list-style: none;
+  display: none;
+}
+.menu__button {
   width: 40px;
+  height: 40px;
   background: url(../../static/images/icon-hamburger.svg) no-repeat center;
+}
+.menu a {
+  text-decoration: none;
+  color: var(--grayBlue);
+  padding: 0 0.8em;
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    display: flex;
+  }
+  .menu__button {
+    display: none;
+  }
 }
 
 .why {
@@ -38,6 +115,21 @@
 }
 .why__item img {
   margin-bottom: 1.5em;
+}
+@media screen and (min-width: 768px) {
+  .why {
+    text-align: left;
+  }
+  .why__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1em;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .why__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .latestArticles {
@@ -68,6 +160,24 @@
   display: grid;
   row-gap: 2em;
 }
+@media screen and (min-width: 768px) {
+  .latestArticles .title__h1 {
+    text-align: left;
+    margin-bottom: 1em;
+  }
+  .latestArticles__item__content {
+    padding: 1em;
+  }
+  .latestArticles__grid {
+    column-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .latestArticles__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
 .title {
   color: var(--darkBlue);
@@ -92,7 +202,7 @@
   padding: 2em 0;
   text-align: center;
 }
-.footer img {
+.footer__logo {
   display: block;
   margin: auto;
   margin-bottom: 2em;
@@ -105,54 +215,46 @@
   margin: 2.5em 0;
 }
 .footer__contact {
-  display: flex;
-  flex-direction: column;
+  display: grid;
 }
 .footer__contact a {
-  color: var(--gray);
   text-decoration: none;
+  color: var(--grayBlue);
+  padding: 0 0.8em;
+  color: var(--gray);
   margin-bottom: 2em;
 }
 .footer__copyright {
   color: var(--grayBlue);
   margin-top: 2.5em;
 }
-
-body {
-  font-family: "Public Sans", sans-serif;
-  font-size: 16px;
-  margin: 0;
-  color: var(--grayBlue);
-}
-
-:root {
-  --grayBlue: hsl(233, 8%, 62%);
-  --gray: hsl(220, 16%, 96%);
-  --lightGray: hsl(0, 0%, 98%);
-  --white: hsl(0, 0%, 100%);
-  --darkBlue: hsl(233, 26%, 24%);
-  --limeGreen: hsl(136, 65%, 51%);
-  --brightCyan: hsl(192, 70%, 51%);
-  --wrapperSpace: 1.5em;
-}
-
-.wrapper {
-  padding: 0 var(--wrapperSpace);
-}
-
-.copy {
-  line-height: 1.7;
-  font-size: 0.9em;
-}
-
-.button {
-  border: none;
-  padding: 0.9em 2.2em;
-  background-image: linear-gradient(to right, var(--limeGreen) 0%, var(--brightCyan) 100%);
-  border-radius: 1.5em;
-  color: var(--white);
-  font-size: 1em;
-  outline: none;
+@media screen and (min-width: 1024px) {
+  .footer .wrapper {
+    display: grid;
+    grid-template-columns: 200px 1fr 400px;
+    grid-template-areas: "logo links button" "social links copyright";
+    column-gap: 7em;
+  }
+  .footer__contact {
+    grid-area: links;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: start;
+  }
+  .footer__logo {
+    grid-area: logo;
+    margin: initial;
+  }
+  .footer__social {
+    grid-area: social;
+  }
+  .footer__button {
+    grid-area: button;
+    text-align: right;
+  }
+  .footer__copyright {
+    grid-area: copyright;
+    text-align: right;
+  }
 }
 
 .icon {
@@ -175,6 +277,46 @@ body {
 }
 .icon__instagram {
   background-image: url("../../static/images/icon-instagram.svg");
+}
+
+body {
+  font-family: "Public Sans", sans-serif;
+  font-size: 16px;
+  margin: 0;
+  color: var(--grayBlue);
+}
+
+:root {
+  --grayBlue: hsl(233, 8%, 62%);
+  --gray: hsl(220, 16%, 96%);
+  --lightGray: hsl(0, 0%, 98%);
+  --white: hsl(0, 0%, 100%);
+  --darkBlue: hsl(233, 26%, 24%);
+  --limeGreen: hsl(136, 65%, 51%);
+  --brightCyan: hsl(192, 70%, 51%);
+  --wrapperSpace: 1.5em;
+}
+
+.wrapper {
+  padding: 0 var(--wrapperSpace);
+  max-width: 1115px;
+  margin: auto;
+  width: 100%;
+}
+
+.copy {
+  line-height: 1.7;
+  font-size: 0.9em;
+}
+
+.button {
+  border: none;
+  padding: 0.9em 2.2em;
+  background-image: linear-gradient(to right, var(--limeGreen) 0%, var(--brightCyan) 100%);
+  border-radius: 1.5em;
+  color: var(--white);
+  font-size: 1em;
+  outline: none;
 }
 
 /*# sourceMappingURL=estilos.css.map */
