--- a/src/sass/base/body.scss
+++ b/src/sass/base/body.scss
@@ -1,6 +1,11 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Public Sans', sans-serif;
     font-size: 16px;
     margin: 0;
     color: var(--grayBlue);
 }
+
