--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -1,6 +1,8 @@
 .menu {
     @include reset-list;
     display: none;
+    padding: 0;
+    margin: 0;
     &__button{
         width: 40px;
         height: 40px;
@@ -8,6 +10,47 @@
     }
     a {
         @include reset-link;
+    }
+    &__item {
+        display: flex;
+        align-items: center;
+    }
+    &__checkbox {
+        display: none;
+        &:checked {
+            & ~ .menu__button {
+                background: url(../../static/images/icon-close.svg) no-repeat center;
+            }
+            & ~ .menu{
+                display: block;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                height: 100vh;
+                padding: 1em;
+                background: linear-gradient(to bottom, var(--darkBlue) 0%, transparent 90%);
+                .menu__item{
+                    &:first-child a {
+                        padding-top: 2em;
+                        border-radius: .5em .5em 0 0;
+                    }
+                    &:last-child a {
+                        padding-bottom: 2em;
+                        border-radius: 0 0 .5em .5em;
+                    }
+                }
+                a{
+                    background-color: var(--white);
+                    padding: .8em 1em;
+                    display: block;
+                    text-align: center;
+                    color: var(--darkBlue);
+                    font-size: 1.1em;
+                    flex: 1;
+                }
+            }
+        }
     }
     @include desktop {
         display: flex;
