--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,7 +1,9 @@
 .header {
-  display: flex;
-  justify-content: space-between;
   padding: 1em 0;
+  position: fixed;
+  width: 100%;
+  background: var(--white);
+  z-index: 3;
 }
 .header__logo {
   align-self: center;
@@ -38,6 +40,9 @@
   margin: 0 calc(-1 * var(--wrapperSpace));
   margin-bottom: 1.2em;
 }
+.hero__imgSrc {
+  display: none;
+}
 @media screen and (min-width: 768px) {
   .hero {
     text-align: left;
@@ -54,7 +59,7 @@
     min-height: 550px;
     align-items: center;
     grid-template-areas: "description images";
-    grid-template-columns: 480px 1fr;
+    grid-template-columns: 370px 1fr;
     position: relative;
   }
   .hero__img {
@@ -69,9 +74,14 @@
   }
 }
 @media screen and (min-width: 1024px) {
+  .hero__imgSrc {
+    display: block;
+    position: relative;
+    top: -150px;
+    z-index: 1;
+  }
   .hero__img {
-    background: url("../../static/images/image-mockups.png") right bottom no-repeat;
-    background-size: 100%;
+    background: none;
     left: 150px;
     right: 0;
     top: 0;
@@ -81,6 +91,8 @@
 .menu {
   list-style: none;
   display: none;
+  padding: 0;
+  margin: 0;
 }
 .menu__button {
   width: 40px;
@@ -91,6 +103,43 @@
   text-decoration: none;
   color: var(--grayBlue);
   padding: 0 0.8em;
+}
+.menu__item {
+  display: flex;
+  align-items: center;
+}
+.menu__checkbox {
+  display: none;
+}
+.menu__checkbox:checked ~ .menu__button {
+  background: url(../../static/images/icon-close.svg) no-repeat center;
+}
+.menu__checkbox:checked ~ .menu {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  padding: 1em;
+  background: linear-gradient(to bottom, var(--darkBlue) 0%, transparent 90%);
+}
+.menu__checkbox:checked ~ .menu .menu__item:first-child a {
+  padding-top: 2em;
+  border-radius: 0.5em 0.5em 0 0;
+}
+.menu__checkbox:checked ~ .menu .menu__item:last-child a {
+  padding-bottom: 2em;
+  border-radius: 0 0 0.5em 0.5em;
+}
+.menu__checkbox:checked ~ .menu a {
+  background-color: var(--white);
+  padding: 0.8em 1em;
+  display: block;
+  text-align: center;
+  color: var(--darkBlue);
+  font-size: 1.1em;
+  flex: 1;
 }
 @media screen and (min-width: 1024px) {
   .menu {
@@ -279,6 +328,33 @@
   background-image: url("../../static/images/icon-instagram.svg");
 }
 
+.button {
+  border: none;
+  padding: 0.9em 2.2em;
+  background-image: linear-gradient(to right, var(--limeGreen) 0%, var(--brightCyan) 100%);
+  border-radius: 1.5em;
+  color: var(--white);
+  font-size: 1em;
+  outline: none;
+}
+
+.wrapper {
+  padding: 0 var(--wrapperSpace);
+  max-width: calc(1115px + 1.5em);
+  margin: auto;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.copy {
+  line-height: 1.7;
+  font-size: 0.9em;
+}
+
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Public Sans", sans-serif;
   font-size: 16px;
@@ -295,28 +371,6 @@ body {
   --limeGreen: hsl(136, 65%, 51%);
   --brightCyan: hsl(192, 70%, 51%);
   --wrapperSpace: 1.5em;
-}
-
-.wrapper {
-  padding: 0 var(--wrapperSpace);
-  max-width: 1115px;
-  margin: auto;
-  width: 100%;
-}
-
-.copy {
-  line-height: 1.7;
-  font-size: 0.9em;
-}
-
-.button {
-  border: none;
-  padding: 0.9em 2.2em;
-  background-image: linear-gradient(to right, var(--limeGreen) 0%, var(--brightCyan) 100%);
-  border-radius: 1.5em;
-  color: var(--white);
-  font-size: 1em;
-  outline: none;
 }
 
 /*# sourceMappingURL=estilos.css.map */
